src/modules/addons/enom_pro/css/admin.css
/*!
eNom PRO for WHMCS by Circle Tree, LLC
Licensed from Orion IP Ventures, LLC
*/
.clearfix:before,
.clearfix:after {
  content: " ";
  display: table;
}
.clearfix:after {
  clear: both;
}
.enom_pro_widget {
  padding: 20px;
}
.enom_pro_output {
  box-sizing: border-box;
  /**
	Icons
	*/
  /****
	* END Icons
	*****/
}
.enom_pro_output #client_select {
  width: 100%;
}
.enom_pro_output .inline-wrap {
  padding: 10px 0;
}
.enom_pro_output #helpWrapper H1,
.enom_pro_output #helpWrapper H2,
.enom_pro_output #helpWrapper H3,
.enom_pro_output #helpWrapper H4 {
  color: #000000;
  font-weight: normal;
  padding: 0;
  margin: 0;
}
.enom_pro_output #helpWrapper H1 {
  margin-top: 20px;
  margin-bottom: 15px;
  border-bottom: 1px solid #dddddd;
  font-size: 16pt;
  font-weight: bold;
}
.enom_pro_output #helpWrapper H2 {
  font-size: 15pt;
  border-bottom: 1px solid #dddddd;
  margin-bottom: 20px;
  margin-top: 10px;
}
.enom_pro_output #helpWrapper H3 {
  font-size: 12pt;
}
.enom_pro_output #helpWrapper H4 {
  font-size: 14pt;
  border-bottom: 1px solid #3a87ad;
  margin-top: 3px;
  margin-bottom: 10px;
}
.enom_pro_output #enom_pro_help_page {
  min-height: 600px;
}
.enom_pro_output #homeHelpContent ul {
  padding-left: 0;
  list-style: none;
}
.enom_pro_output #homeHelpContent ul li {
  box-sizing: border-box;
  width: calc(45%);
  float: left;
  padding: 5px;
  border-bottom: 1px solid #dddddd;
  border-right: 1px solid #e9e9e9;
  background-color: #f7fcfe;
  margin-bottom: 6px;
  margin-right: 5px;
}
.enom_pro_output .searchWrap {
  width: 100%;
  max-width: 400px;
  position: relative;
  display: block;
}
.enom_pro_output .searchWrap input {
  width: 100%;
  font-size: 14pt;
}
.enom_pro_output .searchWrap .enom-pro-icon-cancel-circle {
  /*+placement: anchor-top-right 8px 8px;*/
  position: absolute;
  right: 8px;
  top: 8px;
  font-size: 16px;
}
.enom_pro_output FORM.refreshbutton {
  display: inline-block;
}
.enom_pro_output .refreshbutton .btn {
  background-color: inherit !important;
  color: inherit !important;
}
.enom_pro_output .refreshbutton INPUT[type="submit"] {
  padding: 2px 5px;
}
.enom_pro_output .enom_pro_loader {
  width: 160px;
  height: 20px;
  background-image: url(../images/loading.gif);
  background-repeat: no-repeat;
  background-position: center;
  display: block;
  text-align: center;
  margin: 5px auto;
}
.enom_pro_output .enom_pro_loader.small {
  width: 16px;
  height: 16px;
  background-image: url(../images/loading-small.gif);
  background-color: #ffffff;
  /*+border-radius:8px;*/
  -moz-border-radius: 8px;
  -webkit-border-radius: 8px;
  -khtml-border-radius: 8px;
  border-radius: 8px;
}
.enom_pro_output .enom_pro_loader.small.whois {
  text-indent: 20px;
  width: 120px;
  background-position: left center;
  padding-right: 10px;
}
.enom_pro_output #enom_pro_import_page #import_table_form {
  min-height: 400px;
}
.enom_pro_output #enom_pro_import_page .enom_pro_loader {
  top: 0;
  left: 0;
  float: left;
}
.enom_pro_output #enom_pro_import_page #top_loader {
  position: absolute;
  margin-top: -10px;
}
.enom_pro_output #enom_pro_import_page #loader_bottom {
  position: relative;
}
.enom_pro_output .domain_whois {
  position: relative;
}
.enom_pro_output .hidden {
  display: none;
}
.enom_pro_output .btn.btn-success,
.enom_pro_output .btn.btn-success:visited,
.enom_pro_output .btn-primary,
.enom_pro_output .btn-primary:visited {
  color: #ffffff;
  text-decoration: none;
}
.enom_pro_output .btn.large {
  padding: 10px 20px;
  display: block;
  margin-top: 10px;
}
.enom_pro_output .enom_stat_button {
  text-align: center;
}
.enom_pro_output #enom_pro_transfers_table TH {
  background-color: #d9edf7;
  border-bottom: 1px solid #3a87ad;
}
.enom_pro_output #enom_pro_transfers_table .none TH {
  font-weight: normal;
  padding-bottom: 0;
  word-wrap: normal;
  white-space: nowrap;
  width: 70px;
  padding-left: 5px;
  padding-right: 5px;
  text-align: center;
  background-color: #ebebeb;
}
.enom_pro_output #enom_pro_transfers_table .domain_name {
  display: inline-block;
  width: 150px;
  text-align: center;
  overflow: auto;
}
.enom_pro_output.sidebar table {
  width: 100%;
}
.enom_pro_output.sidebar table .text-right {
  text-align: right;
}
.enom_pro_output.sidebar .label {
  text-shadow: 0 0 1px #000;
}
.enom_pro_output .enom_pro_widget.alert {
  text-align: center;
}
.enom_pro_output #enombalance .alert-danger {
  border: 3px outset #b94a48;
  /*+border-radius:8px;*/
  -moz-border-radius: 8px;
  -webkit-border-radius: 8px;
  -khtml-border-radius: 8px;
  border-radius: 8px;
}
.enom_pro_output #enombalance .alert-danger.inset {
  border-style: inset;
  background-color: #eed4d8;
}
.enom_pro_output #import_table {
  width: 100%;
}
.enom_pro_output .table-hover TD {
  background-color: #f5f5f5;
  border-bottom: 1px solid #d9edf7;
}
.enom_pro_output #import_table TD {
  text-align: right;
  padding: 5px;
}
.enom_pro_output #import_table TD .alert P {
  margin: 0;
}
.enom_pro_output #import_table TH {
  background-color: #f4f4f4;
  border-bottom: 1px solid #ebebeb;
  font-size: 12pt;
  font-weight: normal;
}
.enom_pro_output #import_table TD .alert {
  text-align: left;
}
.enom_pro_output #import_table .alert {
  margin-bottom: 0;
}
.enom_pro_output .table-hover TR:hover TD {
  background-color: #ffffff;
  border-bottom: 1px solid #bce8f1;
}
.enom_pro_output #enom_pro_import_page {
  position: relative;
}
.enom_pro_output #enom_pro_import_page #meta {
  /*+placement:anchor-top-right 0px -50px;*/
  position: absolute;
  right: 0px;
  top: -50px;
  border-bottom: 1px solid #bce8f1;
  background-color: #ffffff;
}
/* ... */

